# cookiecutter-pypackage

./: .buildinfo  README.rst  console_script_setup.html  cookiecutter.json  genindex.html  index.html  invoke.html  objects.inv  prompts.html  pypi_release_checklist.html  pyproject.toml  readme.html  search.html  searchindex.js  tox.ini  travis_pypi_setup.html  troubleshooting.html  tutorial.html
.doctrees/: console_script_setup.doctree  environment.pickle  index.doctree  invoke.doctree  prompts.doctree  pypi_release_checklist.doctree  readme.doctree  travis_pypi_setup.doctree  troubleshooting.doctree  tutorial.doctree
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .flake8  README.rst  pyproject.toml  tasks.py  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
