[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "0.0.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Nathan Hughes <nathan.h.hughes@gmail.com"]
readme = "README.rst"
repository = "https://github.com/nathanhhughes/cookiecutter-pypackage"
keywords = ['cookiecutter', 'template', 'package']

[tool.poetry.dependencies]
python = ">=3.5.*"

[tool.poetry.dev-dependencies]
bump2version = "*"
cookiecutter = "*"
invocations = "*"
invoke = "*"
pytest = "*"
pytest-cookies = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
tox = "*"
pyyaml = "^5.3.1"
